# ATK-modelling-lite

./: .gitignore  CMakeLists.txt  README.md
ATK/Modeling/: CMakeLists.txt  config.h
ATK/Modelling/: CMakeLists.txt  Capacitor.cpp  Capacitor.h  Coil.cpp  Coil.h  Component.cpp  Component.h  Current.cpp  Current.h  Diode.cpp  Diode.h  DynamicModellerFilter.cpp  DynamicModellerFilter.h  Modeler.cpp  Modeler.h  ModellerFilter.cpp  ModellerFilter.h  OpAmp.cpp  OpAmp.h  Resistor.cpp  Resistor.h  SPICE.cpp  SPICE.h  StaticCapacitor.h  StaticCoil.h  StaticCurrent.h  StaticDiode.h  StaticModelFilter.cpp  StaticModelFilter.h  StaticResistor.h  StaticTransistor.h  Transistor.cpp  Transistor.h  Types.h  VoltageGain.cpp  VoltageGain.h  config.h
ATK/Modelling/SPICE/: SPICEFilter.cpp  SPICEFilter.h  SPICEHandler.cpp  SPICEHandler.h  Utilities.cpp  Utilities.h  parser.cpp  parser.h
Examples/: python_moog.py  simple_moog.py
Python/ATK/Modeling/: CMakeLists.txt  Modeling.cpp
Python/ATK/Modelling/: CMakeLists.txt  Modelling.cpp
Python/proto/: lpfilter.cir  modeling.py  rf.cir
Python/proto/ATK/Modeling/: __init__.py  active.py  modeling.py  passive.py  spice.py
Python/proto/ATK/Modelling/: __init__.py  active.py  modeling.py  passive.py  spice.py
Python/proto/test/Modelling/: Transistor_test.py  opamp_test.py  spice_test.py
test/Modelling/: CMakeLists.txt  Capacitor.cpp  Coil.cpp  Diode.cpp  OpAmp.cpp  Resistor.cpp  SPICE.cpp  StaticModelFilter.cpp  Transistor.cpp  main.cpp
test/Modelling/SPICE/: DS1-input.cir  SPICEFilter.cpp  SPICEHandler.cpp  ltspicereader.py  moog.cir  moog.raw  parse_op_raw.py  parse_raw.py  parser.cpp  test.py
test/Python/: env.sh
test/Python/Modeling/: AntiParallelDiode_test.py  Capacitor_test.py  Coil_test.py  Diode_test.py  Resistor_test.py  Transistor_test.py  opamp_test.py  spice_test.py
test/Python/Modelling/: AntiParallelDiode_test.py  CMakeLists.txt  Capacitor_test.py  Coil_test.py  Diode_test.py  PyATKModelling_test.py  Resistor_test.py  Transistor_test.py  spice_test.py
